--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "action-build-typescript",
   "version": "1.3.1",
   "description": "A GitHub Action that builds your TypeScript projects and optionally also pushes the generated code to a different branch on your repository",
-  "main": "src/index.mjs",
+  "main": "main.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/alexthemaster/action-build-typescript.git"
